// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute convert rate api should return success 1`] = `
{
  "data": {
    "result": 60535.74,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 60535.74,
  "statusCode": 200,
}
`;

exports[`execute live api should return success 1`] = `
{
  "data": {
    "result": 21479.7756,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 21479.7756,
  "statusCode": 200,
}
`;
